--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 # Base URL used when generating links to your pages
 # Set to the URL for your site
-baseURL = "https:plod.walkercwhite.com"
+baseURL = "https://plod.walkercwhite.com"
 
 # The name of this wonderful theme ;-).
 theme = 'hugo-bearblog'
